Replace Tailwind CDN with local installation

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Inclure Tailwind CSS via CDN (solution temporaire) -->
+     <script src="https://cdn.tailwindcss.com" defer></script>
      <script>
       tailwind.config = {
         theme: {
